--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html,
+body {
+    color: white;
+    background: black;
+}
+
+[data-theme='dark'],
+[data-theme='dark'] body {
+    color: white;
+    background: black;
+}
